--- a/app/src/main/res/layout/activity_tentang.xml
+++ b/app/src/main/res/layout/activity_tentang.xml
@@ -21,7 +21,7 @@
         android:orientation="vertical"
         android:padding="@dimen/spacing_large">
 
-        <android.support.v7.widget.AppCompatEditText
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -47,6 +47,21 @@
             android:padding="@dimen/spacing_large"
             android:text="@string/perancang" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/spacing_small"
+            android:text="Pengembang" />
+
+        <android.support.v7.widget.AppCompatEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/txt_area"
+            android:enabled="false"
+            android:focusableInTouchMode="false"
+            android:padding="@dimen/spacing_large"
+            android:text="@string/pengembang1"/>
 
     </LinearLayout>
 
