--- a/app/src/main/res/layout/activity_daftar.xml
+++ b/app/src/main/res/layout/activity_daftar.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/red_400"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="10dp">
@@ -25,99 +25,106 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/ic_launcher_smp_foreground" />
+                android:src="@drawable/ic_menu"
+                android:layout_marginBottom="40dp"/>
 
-            <EditText
-                android:id="@+id/kelas"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:background="@color/white"
-                android:enabled="false"
-                android:hint="Kelas"
-                android:padding="10dp"
-                android:singleLine="true"
-                android:text="Kelas 7"
-                android:textColorHint="@color/input_register_hint" />
-
-            <EditText
-                android:id="@+id/name"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:background="@color/white"
-                android:hint="Nama"
-                android:padding="10dp"
-                android:singleLine="true"
-                android:textColorHint="@color/input_register_hint" />
-
-            <EditText
-                android:id="@+id/username"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:background="@color/white"
-                android:hint="Username"
-                android:padding="10dp"
-                android:singleLine="true"
-                android:textColorHint="@color/input_register_hint" />
-
-            <EditText
-                android:id="@+id/email"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:background="@color/white"
-                android:hint="Email"
-                android:inputType="textEmailAddress"
-                android:padding="10dp"
-                android:singleLine="true"
-                android:textColorHint="@color/input_register_hint" />
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:background="@color/white"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:padding="10dp"
-                android:singleLine="true"
-                android:textColorHint="@color/input_register_hint" />
-
-            <EditText
-                android:id="@+id/sekolah"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:background="@color/white"
-                android:hint="Sekolah"
-                android:padding="10dp"
-                android:singleLine="true"
-                android:textColorHint="@color/input_register_hint" />
-
-            <android.support.v7.widget.CardView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <Spinner
-                    android:visibility="gone"
-                    android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@color/white"
+                android:padding="10dp">
+                <EditText
+                    android:id="@+id/name"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:entries="@array/array_jk"
-                    android:padding="12dp">
+                    android:hint="Nama"
+                    android:layout_marginBottom="10dp"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:textColorHint="@color/input_register_hint" />
 
-                </Spinner>
 
-            </android.support.v7.widget.CardView>
+                <EditText
+                    android:id="@+id/username"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:hint="Username"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:textColorHint="@color/input_register_hint" />
+
+                <EditText
+                    android:id="@+id/email"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:textColorHint="@color/input_register_hint" />
+
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/white"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:textColorHint="@color/input_register_hint" />
+
+                <EditText
+                    android:id="@+id/sekolah"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:hint="Sekolah"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:textColorHint="@color/input_register_hint" />
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <Spinner
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:entries="@array/array_jk"
+                        android:padding="12dp">
+
+                    </Spinner>
+
+                </android.support.v7.widget.CardView>
+
+                <EditText
+                    android:id="@+id/kelas"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+
+                    android:enabled="false"
+                    android:hint="Kelas"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:text="Kelas 7"
+                    android:textColorHint="@color/input_register_hint" />
+            </LinearLayout>
+
+
 
             <Button
                 android:id="@+id/btn_daftar_siswa"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/colorAccent"
+                android:background="@drawable/btn_area"
                 android:text="Daftar"
                 android:textColor="@color/white"
                 android:textSize="15dp" />
