--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/gradient"
+    android:background="@color/red_300"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="10dp">
@@ -18,8 +18,8 @@
         <ImageView
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher_smp_foreground"
-            android:layout_width="200dp"
+            android:src="@drawable/ic_menu"
+            android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginBottom="@dimen/spacing_large"/>
         <TextView
@@ -29,29 +29,77 @@
             android:text="Kemampuan Efektif Membaca"
             android:layout_gravity="center"/>
 
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="fill_parent"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:paddingTop="10dp"
             android:background="@color/white"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:textColorHint="@color/input_register_hint" />
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:src="@drawable/ic_person_24dp"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="5dp"/>
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Username"/>
+            </LinearLayout>
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@color/white"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:textColorHint="@color/input_register_hint" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_password_24dp"
+                    android:layout_marginRight="5dp"/>
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/white"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:textColorHint="@color/input_register_hint" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+        <!--<EditText-->
+            <!--android:id="@+id/email"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@color/white"-->
+            <!--android:hint="Email"-->
+            <!--android:inputType="textEmailAddress"-->
+            <!--android:padding="10dp"-->
+            <!--android:singleLine="true"-->
+            <!--android:textColorHint="@color/input_register_hint" />-->
+
+        <!--<EditText-->
+            <!--android:id="@+id/password"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="10dp"-->
+            <!--android:background="@color/white"-->
+            <!--android:hint="Password"-->
+            <!--android:inputType="textPassword"-->
+            <!--android:padding="10dp"-->
+            <!--android:singleLine="true"-->
+            <!--android:textColorHint="@color/input_register_hint" />-->
 
         <!-- Login Button -->
 
@@ -60,9 +108,10 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
-            android:background="@color/colorAccent"
+            android:background="@drawable/btn_area"
             android:text="Login"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
 
         <!-- Link to Login Screen -->
 
@@ -76,8 +125,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dip"
+                android:layout_marginRight="5dip"
                 android:layout_weight="1"
-                android:background="@color/colorAccent"
+                android:background="@drawable/btn_area"
                 android:text="Daftar Siswa"
                 android:textColor="@color/white"
                 android:textSize="15dp" />
@@ -88,7 +138,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dip"
                 android:layout_weight="1"
-                android:background="@color/colorPrimaryDark"
+                android:background="@drawable/btn_area"
                 android:text="ADMIN"
                 android:textColor="@color/white"
                 android:textSize="15dp" />
