--- a/app/src/main/res/layout/activity_petunjuk.xml
+++ b/app/src/main/res/layout/activity_petunjuk.xml
@@ -15,63 +15,168 @@
         app:title="PETUNJUK"
         app:titleTextColor="@color/white"></android.support.v7.widget.Toolbar>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@color/red_400"
         android:padding="@dimen/spacing_large">
-
-        <android.support.v7.widget.AppCompatEditText
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/txt_area"
-            android:enabled="false"
-            android:focusableInTouchMode="false"
-            android:padding="@dimen/spacing_large"
-            android:text="@string/text_1" />
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/one"
+                android:paddingRight="5dp"/>
+            <android.support.v7.widget.AppCompatEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/txt_area"
+                android:textColor="@color/white"
+                android:enabled="false"
+                android:focusableInTouchMode="false"
+                android:padding="@dimen/spacing_large"
+                android:text="@string/text_1" />
+        </LinearLayout>
 
-        <android.support.v7.widget.AppCompatEditText
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/txt_area"
-            android:enabled="false"
-            android:focusableInTouchMode="false"
-            android:padding="@dimen/spacing_large"
-            android:text="@string/text_2" />
-
-        <android.support.v7.widget.AppCompatEditText
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/two"
+                android:paddingRight="5dp"/>
+            <android.support.v7.widget.AppCompatEditText
+                android:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/txt_area"
+                android:enabled="false"
+                android:focusableInTouchMode="false"
+                android:padding="@dimen/spacing_large"
+                android:text="@string/text_2" />
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/txt_area"
-            android:enabled="false"
-            android:focusableInTouchMode="false"
-            android:padding="@dimen/spacing_large"
-            android:text="@string/text_3" />
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/three"
+                android:paddingRight="5dp"/>
 
-        <android.support.v7.widget.AppCompatEditText
+            <android.support.v7.widget.AppCompatEditText
+                android:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/txt_area"
+                android:enabled="false"
+                android:focusableInTouchMode="false"
+                android:padding="@dimen/spacing_large"
+                android:text="@string/text_3" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/txt_area"
-            android:enabled="false"
-            android:focusableInTouchMode="false"
-            android:padding="@dimen/spacing_large"
-            android:text="@string/text_4" />
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/four"
+                android:paddingRight="5dp"/>
+            <android.support.v7.widget.AppCompatEditText
+                android:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/txt_area"
+                android:enabled="false"
+                android:focusableInTouchMode="false"
+                android:padding="@dimen/spacing_large"
+                android:text="@string/text_4" />
+        </LinearLayout>
 
-        <android.support.v7.widget.AppCompatEditText
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/txt_area"
-            android:enabled="false"
-            android:focusableInTouchMode="false"
-            android:padding="@dimen/spacing_large"
-            android:text="@string/text_5" />
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/five"
+                android:paddingRight="5dp"/>
+            <android.support.v7.widget.AppCompatEditText
+                android:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/txt_area"
+                android:enabled="false"
+                android:focusableInTouchMode="false"
+                android:padding="@dimen/spacing_large"
+                android:text="@string/text_5" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/six"
+                android:paddingRight="5dp"/>
+            <android.support.v7.widget.AppCompatEditText
+                android:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/txt_area"
+                android:enabled="false"
+                android:focusableInTouchMode="false"
+                android:padding="@dimen/spacing_large"
+                android:text="@string/text_6" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/seven"
+                android:paddingRight="5dp"/>
+            <android.support.v7.widget.AppCompatEditText
+                android:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/txt_area"
+                android:enabled="false"
+                android:focusableInTouchMode="false"
+                android:padding="@dimen/spacing_large"
+                android:text="@string/text_7" />
+        </LinearLayout>
 
     </LinearLayout>
-
+    </ScrollView>
 </LinearLayout>
